tdf#157576 and tdf#157635 mask out black pixels

Due to the switch from transparency to alpha in commit
81994cb2b8b32453a92bcb011830fcb884f22ff3, mask out black
pixels in bitmap.

Change-Id: I7cc8c39c20d8ec4fed026c3e27fce24396815d68
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157665
Tested-by: Jenkins
Reviewed-by: Patrick Luby <plubius@neooffice.org>